Add se agregaron ajustes para que el codigo sea mantenible
