# src/main/java/com/customer/business/util/enums/CustomerType.java
@@ -1,5 +1,14 @@
 package com.customer.business.util.enums;
 
+import lombok.Getter;
+
+@Getter
 public enum CustomerType {
-    PERSONAL, BUSINESS
+    PERSONAL("PERSONAL"), BUSINESS("BUSINESS");
+
+    private String value;
+
+    CustomerType(String value) {
+        this.value = value;
+    }
 }
